add: launching fabric client